[tool.poetry]
name = "pyircd"
version = "0.1.0"
description = "An IRC Daemon written in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
