[tool.poetry]
name = "pyircd"
version = "0.1.0"
description = "An IRC Daemon written in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
irc = "^20.1.0"
pyyaml = "^6.0"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [".", "src", "src/daemon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
